# voiceclone

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  STATUS.md  brief.md  pyproject.toml
code/src/voiceclone/: server.py
docs/: INFORME-PROCESO-COMPLETO.md  accesibilidad-aac.md  arquitectura-completa.md  capa3-personalidad-ia.md  chatterbox-install.md  compatibilidad-openclaw-voz.md  contratos-interfaz-v2.md  contratos-interfaz.md  diseno-accesibilidad.md  flujo-instalacion.md  hardware-detection.md  hardware.js  index.html  investigacion-arquitectura.md  investigacion-modelos.md  openclaw-arquitectura-referencia.md  prerequisitos-v2.md  prerequisitos.md  qa-accessibility.md  qa-e2e-test.md  qa-installer-v2.md  qa-installer.md  qa-onboarding.md  qa-system-control.md  web-arquitectura-v4.md
equipo/: comunicador-ia.md  experto-accesibilidad.md  experto-audio.md  experto-devops.md  experto-personalidad-ia.md  experto-sistemas-locales.md  experto-ux.md  experto-voz-ia.md  orquestador.md
mockups/: cli-mockups.md  web-app-mockups.md
qa-screenshots/: QA-REPORT.md
reuniones/: 2026-03-20-reunion-capa3-evolucion.md  2026-03-20-reunion-diseno-ARCHIVADA.md  2026-03-20-reunion-inicial-ARCHIVADA.md  2026-03-20-reunion-revision.md  2026-03-20-reunion-v3-vision-completa.md  2026-03-20-reunion-v4-canales.md
scripts/: install-linux.sh  install-macos.sh  install.sh  install_windows.ps1
src/: __init__.py  cli.py
src/api/: __init__.py  app.py  main.py  models.py  server.py
src/channels/: __init__.py  base.py  channel_manager.py  telegram_channel.py  whatsapp_channel.py
src/landing/: hardware.js  vercel.json
src/llm/: __init__.py  ollama_client.py  onboarding_agent.py  phrase_predictor.py
src/personality/: __init__.py  engine.py  llm.py  profile.py  questionnaire.py
src/rag/: __init__.py  ingester.py  retriever.py  vector_store.py
src/system/: __init__.py  app_launcher.py  browser_control.py  email_manager.py  file_manager.py
src/voice_engine/: __init__.py  audio_utils.py  base.py  chatterbox_engine.py  manager.py  recorder.py  xtts_engine.py
src/web/: next.config.ts  package-lock.json  package.json
tests/: __init__.py  test_api.py  test_hardware.js  test_installer.sh  test_ollama_client.py  test_personality.py  test_system.py  test_voice_engine.py
vision/: vision.md
(+29 files in other folders)
